tests/snapshots/tests__basic-2.snap
---
source: tests/tests.rs
expression: "parse(\"beautifulsoup4\")"
---
Ok(
    Dependency {
        name: "beautifulsoup4",
        extras: [],
        spec: None,
        marker: None,
    },
)
