tests/snapshots/tests__basic.snap
---
source: tests/tests.rs
expression: "parse(\"requests\")"
---
Ok(
    Dependency {
        name: "requests",
        extras: [],
        spec: None,
        marker: None,
    },
)
