tests/snapshots/tests__pep-2.snap
---
source: tests/tests.rs
expression: "parse(\"A.B-C_D\")"
---
Ok(
    Dependency {
        name: "A.B-C_D",
        extras: [],
        spec: None,
        marker: None,
    },
)
