tests/snapshots/tests__pep-3.snap
---
source: tests/tests.rs
expression: "parse(\"aa\")"
---
Ok(
    Dependency {
        name: "aa",
        extras: [],
        spec: None,
        marker: None,
    },
)
