tests/snapshots/tests__pep-4.snap
---
source: tests/tests.rs
expression: "parse(\"name\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [],
        spec: None,
        marker: None,
    },
)
