tests/snapshots/tests__pep-6.snap
---
source: tests/tests.rs
expression: "parse(\"name>=4\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [],
        spec: Some(
            Version(
                [
                    VersionSpec {
                        comparator: Ge,
                        version: "4",
                    },
                ],
            ),
        ),
        marker: None,
    },
)
