tests/snapshots/tests__pep-8.snap
---
source: tests/tests.rs
expression: "parse(\"name@http://foo.com\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [],
        spec: Some(
            Url(
                "http://foo.com",
            ),
        ),
        marker: None,
    },
)
