tests/snapshots/tests__pep.snap
---
source: tests/tests.rs
expression: "parse(\"A\")"
---
Ok(
    Dependency {
        name: "A",
        extras: [],
        spec: None,
        marker: None,
    },
)
